--- a/BackEnd_Java_Client/pom.xml
+++ b/BackEnd_Java_Client/pom.xml
@@ -56,6 +56,11 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.1</version>
+        </dependency>
     </dependencies>
 
     <build>
